--- a/templates/fortune_result.html
+++ b/templates/fortune_result.html
@@ -9,31 +9,31 @@
     <meta property="og:description" content="15일 메이킹챌린지 6기 - 1조 뿕은악마"/>
     <meta property="og:image" content="{{ url_for('static', filename='images/gift-og.png') }}"/>
 
-    <title>선물별 성격유형 테스트</title>
+    <!--CSS -->
+    <link rel="stylesheet" href="../static/style/result.css">
+
 </head>
 <body>
-<div class="container">
+<div class="wrap container">
     <div class="row">
         <div class="col-lg-6 offset-md-3">
-            <div class="wrap" style="padding: 50px 20px;">
-                <div class="intro-img">
-                    <img src="../static/images/fortune-conc.png">
+            <div class="intro-img">
+                <img src="../static/images/fortune-conc.png">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 offset-md-3 txt-center">
+            <div class="main-text">
+                <h5>
+                    갈 길이 정말 멀다 이래서 취업은 언제 하나!?
+                </h5>
+            </div>
+            <div>
+                <div class="btn-wrapper">
+                    <a class="try-btn">다시 하기</a>
+                    <a id="save-btn">저장하기</a>
                 </div>
-                <br>
-                <div style="border:10px; border-radius: 10px; padding: 20px 20px; background-color:#D5B896">
-                    코딩은 배워도 배워도 끝이 없는 것. 계속되는 오류 속에서 나에게 남는 것은 오기 뿐이다. 스파르타 코딩클럽 메이킹 챌린지 참여를 후회하고 싶어지는 지금. 나는 어떻게 이 위기를
-                    극복할
-                    것인가. 두둥둥
-                </div>
-                <br>
-                <a href="fortune.html">
-                    <button class="main-btn red-font" style="background-color: white; display: inline-block;">다시하기
-                    </button>
-                </a>
-                <a href="index.html">
-                    <button class="main-btn red-font" style="background-color: white; display: inline-block;">저장하기
-                    </button>
-                </a>
             </div>
         </div>
     </div>
