포춘쿠키 팝업 | cookie.html, cookie.css, cookie.js 추가, result.html에 cookie.html include script 추가

--- a/templates/result.html
+++ b/templates/result.html
@@ -11,9 +11,11 @@
 
     <!--CSS -->
     <link rel="stylesheet" href="../static/style/result.css">
+    <link rel="stylesheet" href="../static/style/cookie.css">
 
     <!-- javascript -->
     <script type="text/javascript" src="../static/js/result.js"></script>
+    <script type="text/javascript" src="../static/js/cookie.js"></script>
 </head>
 <body>
 <div class="wrap container">
@@ -82,6 +84,7 @@
             </div>
         </div>
     </div>
+    {% include 'cookie.html' %}
 </div>
 <footer>
     <!--footer.html에 공통 내용 삽입-->
