--- a/static/style/cookie.css
+++ b/static/style/cookie.css
@@ -1,4 +1,8 @@
 #cookie-btn{
+    position: fixed;
+    right: 50%;
+    top: 180px;
+    margin-right: -720px;
     text-align:center;
     height:140px;
     width:140px;
