--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -29,12 +29,16 @@
                             </div>
                             <div class="answer">
                                 <div>
-                                    <input type="radio" name="answer_1">
-                                    <label>A. 다수의 친구들과 시끌벅적하게 보낸다.</label>
+                                    <label class="option">
+                                        <input type="radio" name="answer_1" value="옵션1">
+                                        <span>대답1</span>
+                                    </label>
                                 </div>
                                 <div>
-                                    <input type="radio" name="answer_1">
-                                    <label>B. 소수의 친구들과 오붓하게 보낸다.</label>
+                                    <label class="option">
+                                        <input type="radio" name="answer_1" value="옵션1">
+                                        <span>대답2</span>
+                                    </label>
                                 </div>
                             </div>
                             <div class="btn_wrap">
@@ -48,12 +52,16 @@
                             </div>
                             <div class="answer">
                                 <div>
-                                    <input type="radio" name="answer_1">
-                                    <label>대답</label>
+                                    <label class="option">
+                                        <input type="radio" name="answer_1" value="옵션1">
+                                        <span>대답1</span>
+                                    </label>
                                 </div>
                                 <div>
-                                    <input type="radio" name="answer_1">
-                                    <label>대답</label>
+                                    <label class="option">
+                                        <input type="radio" name="answer_1" value="옵션1">
+                                        <span>대답2</span>
+                                    </label>
                                 </div>
                             </div>
                             <div class="btn_sort">
