Style | #cookie-btn top: px에서 %로 변경, z-index 추가

--- a/static/style/cookie.css
+++ b/static/style/cookie.css
@@ -1,13 +1,13 @@
 #cookie-btn{
     position: fixed;
     right: 50%;
-    top: 180px;
-    margin-right: -720px;
+    top: 30%;
     text-align:center;
     height:140px;
     width:140px;
     border-radius:50%;
     background-color:#F5E9DA;
+    z-index: 3;
 }
 
 #cookie-btn > img {
