Style | footer 아이콘 정렬

--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -109,22 +109,11 @@ footer {
     flex: 0 0 auto;
 }
 
-footer .container .row .col-sm-3{margin: 30px 0;}
-
-footer hr{
-    background-color:#FF7676;
-    margin: 0px;
-    height: 2px;
-}
+footer .container .row .col-md-3{margin: 30px 0;}
 
 .icons{
-    text-align: center;
+    float:right;
     display: inline;
-    margin-left: 15px;
-}
-
-.icons a{
-    text-decoration: none;
 }
 
 .icons i{
@@ -134,4 +123,22 @@ footer hr{
     margin-right: 5px;
     border-radius: 5px;
 }
+
+
+footer hr{
+    background-color:#FF7676;
+    margin: 0px;
+    height: 2px;
+}
+
+/*.icons{*/
+/*    text-align: center;*/
+/*    display: inline;*/
+/*    margin-left: 15px;*/
+/*}*/
+
+/*.icons a{*/
+/*    text-decoration: none;*/
+/*}*/
+
 
