--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-md-3">
             <span style="color:white;">Reddev</span>
         </div>
-        <div class="col-sm-6">
+        <div class="col-lg-6">
         </div>
-        <div class="col-sm-3 footer-font">
-            Follow us
+        <div class="col-md-3 footer-font">
+            <span>Follow us</span>
             <div class="icons">
                 <a href="#">
                     <i class="bi bi-facebook"></i>
@@ -24,12 +24,12 @@
         <hr>
     </div>
     <div class="row">
-        <div class="col-sm-3 footer-font">
+        <div class="col-md-3 footer-font">
             ⓒ 2021, Reddev.
         </div>
-        <div class="col-sm-6">
+        <div class="col-lg-6">
         </div>
-        <div class="col-sm-3">
+        <div class="col-md-3">
         </div>
     </div>
 </div>
