--- a/static/style/result.css
+++ b/static/style/result.css
@@ -50,9 +50,9 @@
 
 
 .giftimg{
-    margin-left: -17px;
+    padding: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 50px;
 }
 
@@ -63,13 +63,11 @@
 }
 
 .giftimg .img_wrap {
-    width: 120px;
-    height: 120px;
     overflow: hidden;
     margin-bottom: 10px;
 }
 
-.giftimg .img_wrap>img {width:100%;}
+.giftimg .img_wrap>img {max-width: 90%;}
 
 .fortune-wrapper>div {
     position: absolute;
