--- a/templates/result.html
+++ b/templates/result.html
@@ -32,7 +32,7 @@
             <div style="margin: 40px 0 60px">
                 <i class="bi bi-chevron-down" style="font-size:40px; color:#D5B896;"></i>
             </div>
-            <ul class="giftimg clearfix">
+            <ul class="giftimg">
                 <li>
                     <div class="img_wrap"><img src="../static/images/gifts-types/01.png" alt=""></div>
                 </li>
