--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,7 +6,7 @@
         <div class="col-lg-6">
         </div>
         <div class="col-md-3 footer-font">
-            <span>Follow us</span>
+            <span style="float: left">Follow us</span>
             <div class="icons">
                 <a href="#">
                     <i class="bi bi-facebook"></i>
