--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,9 @@
 <div class="container">
-    <div class="row">
-        <div class="col-sm-3">
+    <div class="row mb-4">
+        <div class="col-4">
             <span style="color:white;">Reddev</span>
         </div>
-        <div class="col-sm-6">
-        </div>
-        <div class="col-sm-3 footer-font">
-            Follow us
+        <div class="col-8 lgRed-font follow clearfix">
             <div class="icons">
                 <a href="#">
                     <i class="bi bi-facebook"></i>
@@ -18,18 +15,13 @@
                     <i class="bi bi-twitter"></i>
                 </a>
             </div>
+            <!--<p>Follow us</p>-->
         </div>
     </div>
-    <div>
-        <hr>
-    </div>
+    <hr>
     <div class="row">
-        <div class="col-sm-3 footer-font">
-            ⓒ 2021, Reddev.
-        </div>
-        <div class="col-sm-6">
-        </div>
-        <div class="col-sm-3">
+        <div class="col-12 mt-3">
+            <p class="lgRed-font">ⓒ 2021, Reddev.</p>
         </div>
     </div>
 </div>
