--- a/templates/head.html
+++ b/templates/head.html
@@ -27,6 +27,8 @@
 
 <title>선물별 성격유형 테스트</title>
 
+<!-- CSS -->
+<link rel="stylesheet" href="{{ url_for('static', filename='style/styles.css') }}">
 
-<!--CSS -->
-<link rel="stylesheet" href="../static/style/styles.css">
+<!-- JS -->
+<script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
