--- a/templates/result/ESTJ.html
+++ b/templates/result/ESTJ.html
@@ -32,7 +32,7 @@
             <h1 id="gift-type" class="red-font mb-5">선물 이름</h1>
 
             <h3 id="keyword" class="mb-3">#키워드01, #키워드02, #키워드03</h3>
-            <ul class="mb-5">
+            <ul class="col-12 mb-5">
                 <li>당신은 새로운 관계를 만드는 것에 열정적인 사람이에요.</li>
                 <li>활발한 성격의 소유자로 사람들과 어울리기를 좋아해요.</li>
                 <li>매우 창의적이고 항상 웃을 거리를 찾아다녀요.</li>
