--- a/templates/cookie.html
+++ b/templates/cookie.html
@@ -30,15 +30,16 @@
     </div>
     <div class="text-center">
         <div class="intro-img">
-            <img src="{{ url_for('static', filename='images/fortune-main.png') }}">
+            <img src="{{ url_for('static', filename='images/fortune-conc.png') }}">
         </div>
-        <div class="main-text mb-4">
+        <div class="cookie-content main-text mb-4">
             <h5>
-                결과창
+                포춘쿠키 내용물
             </h5>
         </div>
-        <button class="main-btn red-font" type="button">
-            포춘쿠키 뽑아보기
-        </button>
+        <div class="btn-wrapper row">
+            <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
+            <button class="half-btn red-font" type="button" onClick="to_main()">메인으로</button>
+        </div>
     </div>
 </div>
