JS | 포춘쿠키 랜덤결과 출력기능 구현

--- a/static/style/cookie.css
+++ b/static/style/cookie.css
@@ -42,7 +42,7 @@
 .close {cursor: pointer;}
 .openPopup {cursor: pointer;}
 
-.cookie-content{
+#cookie-content{
     background-color: #E6D2BA;
     padding: 30px 20px;
 }
