--- a/templates/cookie.html
+++ b/templates/cookie.html
@@ -16,7 +16,7 @@
         </div>
         <div class="main-text mb-4">
             <h5>
-                우리 포춘쿠키도 뽑아 볼래요?
+                무엇이 나올까요?
             </h5>
         </div>
         <button id="get-cookie" class="main-btn red-font" type="button">
@@ -32,7 +32,7 @@
         <div class="intro-img">
             <img src="{{ url_for('static', filename='images/fortune-conc.png') }}">
         </div>
-        <div class="cookie-content main-text mb-4">
+        <div id="cookie-content" class="main-text mb-4">
             <h5>
                 포춘쿠키 내용물
             </h5>
