--- a/templates/cookie.html
+++ b/templates/cookie.html
@@ -1,4 +1,4 @@
-<div id="cookie-btn" class="row">
+<div id="cookie-btn" class="open-cookie row">
     <div class="col-6">
         <img src="{{ url_for('static', filename='images/fortune-main.png') }}">
     </div>
@@ -38,7 +38,7 @@
             </h5>
         </div>
         <div class="btn-wrapper row">
-            <button class="half-btn red-font" type="button" onClick="history.go(-1)">다시하기</button>
+            <button class="open-cookie half-btn red-font" type="button">다시하기</button>
             <button class="half-btn red-font" type="button" onClick="to_main()">메인으로</button>
         </div>
     </div>
